parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> elementos_opt
Rule 2     elementos_opt -> lambda
Rule 3     elementos_opt -> elementos
Rule 4     elementos -> elementos elemento
Rule 5     elementos -> elemento
Rule 6     elemento -> SEMICOLON
Rule 7     elemento -> declaracion_funcion_void
Rule 8     elemento -> declaracion_o_funcion_tipada
Rule 9     elemento -> declaracion_record SEMICOLON
Rule 10    elemento -> sentencia_bloque
Rule 11    elemento -> sentencia_simple SEMICOLON
Rule 12    declaracion_funcion_void -> VOID ID LPAREN parametros_opt RPAREN inicio_funcion_void bloque_void fin_funcion_void
Rule 13    inicio_funcion_void -> <empty>
Rule 14    fin_funcion_void -> <empty>
Rule 15    declaracion_o_funcion_tipada -> tipo ID marcar_declaracion_tipada resto_tipado_programa
Rule 16    marcar_declaracion_tipada -> <empty>
Rule 17    resto_tipado_programa -> LPAREN parametros_opt RPAREN inicio_funcion_tipada bloque fin_funcion_tipada
Rule 18    resto_tipado_programa -> ASSIGN expresion SEMICOLON
Rule 19    resto_tipado_programa -> resto_lista_ids SEMICOLON
Rule 20    inicio_funcion_tipada -> <empty>
Rule 21    fin_funcion_tipada -> <empty>
Rule 22    resto_lista_ids -> lambda
Rule 23    resto_lista_ids -> resto_lista_ids COMMA ID
Rule 24    bloque_void -> LBRACE elementos_bloque_void_opt RBRACE
Rule 25    elementos_bloque_void_opt -> lambda
Rule 26    elementos_bloque_void_opt -> elementos_bloque_void
Rule 27    elementos_bloque_void -> elementos_bloque_void elemento_bloque_void
Rule 28    elementos_bloque_void -> elemento_bloque_void
Rule 29    elemento_bloque_void -> SEMICOLON
Rule 30    elemento_bloque_void -> sentencia_bloque_void
Rule 31    elemento_bloque_void -> declaracion_variable SEMICOLON
Rule 32    elemento_bloque_void -> sentencia_simple_void SEMICOLON
Rule 33    sentencia_bloque_void -> bloque_void
Rule 34    sentencia_bloque_void -> sentencia_if_void
Rule 35    sentencia_bloque_void -> sentencia_while_void
Rule 36    sentencia_bloque_void -> sentencia_do_while_void
Rule 37    sentencia_if_void -> IF LPAREN expresion RPAREN if_mark bloque_void else_void_opt if_end_mark
Rule 38    else_void_opt -> lambda
Rule 39    else_void_opt -> else_mark ELSE bloque_void
Rule 40    sentencia_while_void -> WHILE while_start LPAREN expresion RPAREN while_cond_mark entrar_bucle bloque_void salir_bucle while_end
Rule 41    sentencia_do_while_void -> DO do_start entrar_bucle bloque_void salir_bucle WHILE LPAREN expresion RPAREN SEMICOLON do_end
Rule 42    sentencia_simple_void -> asignacion
Rule 43    sentencia_simple_void -> print_stmt
Rule 44    sentencia_simple_void -> BREAK
Rule 45    sentencia_simple_void -> expresion
Rule 46    sentencia_bloque -> bloque
Rule 47    sentencia_bloque -> sentencia_if
Rule 48    sentencia_bloque -> sentencia_while
Rule 49    sentencia_bloque -> sentencia_do_while
Rule 50    bloque -> LBRACE elementos_bloque_opt RBRACE
Rule 51    elementos_bloque_opt -> lambda
Rule 52    elementos_bloque_opt -> elementos_bloque
Rule 53    elementos_bloque -> elementos_bloque elemento_bloque
Rule 54    elementos_bloque -> elemento_bloque
Rule 55    elemento_bloque -> SEMICOLON
Rule 56    elemento_bloque -> sentencia_bloque
Rule 57    elemento_bloque -> declaracion_variable SEMICOLON
Rule 58    elemento_bloque -> sentencia_simple SEMICOLON
Rule 59    sentencia_if -> IF LPAREN expresion RPAREN if_mark bloque else_opt if_end_mark
Rule 60    else_opt -> lambda
Rule 61    else_opt -> else_mark ELSE bloque
Rule 62    sentencia_while -> WHILE while_start LPAREN expresion RPAREN while_cond_mark entrar_bucle bloque salir_bucle while_end
Rule 63    sentencia_do_while -> DO do_start entrar_bucle bloque salir_bucle WHILE LPAREN expresion RPAREN SEMICOLON do_end
Rule 64    if_mark -> <empty>
Rule 65    else_mark -> <empty>
Rule 66    if_end_mark -> <empty>
Rule 67    while_start -> <empty>
Rule 68    while_cond_mark -> <empty>
Rule 69    while_end -> <empty>
Rule 70    do_start -> <empty>
Rule 71    do_end -> <empty>
Rule 72    entrar_bucle -> <empty>
Rule 73    salir_bucle -> <empty>
Rule 74    sentencia_simple -> asignacion
Rule 75    sentencia_simple -> print_stmt
Rule 76    sentencia_simple -> BREAK
Rule 77    sentencia_simple -> RETURN expresion
Rule 78    sentencia_simple -> expresion
Rule 79    declaracion_variable -> tipo lista_ids
Rule 80    declaracion_variable -> tipo ID ASSIGN expresion
Rule 81    lista_ids -> ID
Rule 82    lista_ids -> lista_ids COMMA ID
Rule 83    asignacion -> acceso ASSIGN expresion
Rule 84    print_stmt -> PRINT LPAREN argumentos_opt RPAREN
Rule 85    declaracion_record -> RECORD ID LPAREN campos_record_opt RPAREN
Rule 86    campos_record_opt -> lambda
Rule 87    campos_record_opt -> campos_record
Rule 88    campos_record -> campos_record COMMA campo_record_item
Rule 89    campos_record -> campo_record_item
Rule 90    campo_record_item -> tipo ID
Rule 91    campo_record_item -> ID
Rule 92    parametros_opt -> lambda
Rule 93    parametros_opt -> parametros
Rule 94    parametros -> parametros COMMA parametro
Rule 95    parametros -> parametro
Rule 96    parametro -> tipo ID
Rule 97    tipo -> INT
Rule 98    tipo -> FLOAT
Rule 99    tipo -> CHAR
Rule 100   tipo -> BOOLEAN
Rule 101   tipo -> ID
Rule 102   expresion -> expresion OR expresion
Rule 103   expresion -> expresion AND expresion
Rule 104   expresion -> expresion EQUAL expresion
Rule 105   expresion -> expresion GREATER expresion
Rule 106   expresion -> expresion GREATER_EQUAL expresion
Rule 107   expresion -> expresion LESS expresion
Rule 108   expresion -> expresion LESS_EQUAL expresion
Rule 109   expresion -> expresion PLUS expresion
Rule 110   expresion -> expresion MINUS expresion
Rule 111   expresion -> expresion TIMES expresion
Rule 112   expresion -> expresion DIVIDE expresion
Rule 113   expresion -> NOT expresion
Rule 114   expresion -> MINUS expresion
Rule 115   expresion -> PLUS expresion
Rule 116   expresion -> primario
Rule 117   primario -> literal
Rule 118   primario -> acceso
Rule 119   primario -> llamada
Rule 120   primario -> LPAREN expresion RPAREN
Rule 121   primario -> instanciacion
Rule 122   acceso -> ID
Rule 123   acceso -> acceso DOT ID
Rule 124   llamada -> ID LPAREN argumentos_opt RPAREN
Rule 125   instanciacion -> NEW ID LPAREN argumentos_opt RPAREN
Rule 126   argumentos_opt -> lambda
Rule 127   argumentos_opt -> argumentos
Rule 128   argumentos -> argumentos COMMA expresion
Rule 129   argumentos -> expresion
Rule 130   literal -> INT_VALUE
Rule 131   literal -> FLOAT_VALUE
Rule 132   literal -> CHAR_VALUE
Rule 133   literal -> TRUE
Rule 134   literal -> FALSE
Rule 135   lambda -> <empty>

Terminals, with rules where they appear

AND                  : 103
ASSIGN               : 18 80 83
BOOLEAN              : 100
BREAK                : 44 76
CHAR                 : 99
CHAR_VALUE           : 132
COMMA                : 23 82 88 94 128
DIVIDE               : 112
DO                   : 41 63
DOT                  : 123
ELSE                 : 39 61
EQUAL                : 104
FALSE                : 134
FLOAT                : 98
FLOAT_VALUE          : 131
GREATER              : 105
GREATER_EQUAL        : 106
ID                   : 12 15 23 80 81 82 85 90 91 96 101 122 123 124 125
IF                   : 37 59
INT                  : 97
INT_VALUE            : 130
LBRACE               : 24 50
LESS                 : 107
LESS_EQUAL           : 108
LPAREN               : 12 17 37 40 41 59 62 63 84 85 120 124 125
MINUS                : 110 114
NEW                  : 125
NOT                  : 113
OR                   : 102
PLUS                 : 109 115
PRINT                : 84
RBRACE               : 24 50
RECORD               : 85
RETURN               : 77
RPAREN               : 12 17 37 40 41 59 62 63 84 85 120 124 125
SEMICOLON            : 6 9 11 18 19 29 31 32 41 55 57 58 63
TIMES                : 111
TRUE                 : 133
VOID                 : 12
WHILE                : 40 41 62 63
error                : 

Nonterminals, with rules where they appear

acceso               : 83 118 123
argumentos           : 127 128
argumentos_opt       : 84 124 125
asignacion           : 42 74
bloque               : 17 46 59 61 62 63
bloque_void          : 12 33 37 39 40 41
campo_record_item    : 88 89
campos_record        : 87 88
campos_record_opt    : 85
declaracion_funcion_void : 7
declaracion_o_funcion_tipada : 8
declaracion_record   : 9
declaracion_variable : 31 57
do_end               : 41 63
do_start             : 41 63
elemento             : 4 5
elemento_bloque      : 53 54
elemento_bloque_void : 27 28
elementos            : 3 4
elementos_bloque     : 52 53
elementos_bloque_opt : 50
elementos_bloque_void : 26 27
elementos_bloque_void_opt : 24
elementos_opt        : 1
else_mark            : 39 61
else_opt             : 59
else_void_opt        : 37
entrar_bucle         : 40 41 62 63
expresion            : 18 37 40 41 45 59 62 63 77 78 80 83 102 102 103 103 104 104 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 114 115 120 128 129
fin_funcion_tipada   : 17
fin_funcion_void     : 12
if_end_mark          : 37 59
if_mark              : 37 59
inicio_funcion_tipada : 17
inicio_funcion_void  : 12
instanciacion        : 121
lambda               : 2 22 25 38 51 60 86 92 126
lista_ids            : 79 82
literal              : 117
llamada              : 119
marcar_declaracion_tipada : 15
parametro            : 94 95
parametros           : 93 94
parametros_opt       : 12 17
primario             : 116
print_stmt           : 43 75
programa             : 0
resto_lista_ids      : 19 23
resto_tipado_programa : 15
salir_bucle          : 40 41 62 63
sentencia_bloque     : 10 56
sentencia_bloque_void : 30
sentencia_do_while   : 49
sentencia_do_while_void : 36
sentencia_if         : 47
sentencia_if_void    : 34
sentencia_simple     : 11 58
sentencia_simple_void : 32
sentencia_while      : 48
sentencia_while_void : 35
tipo                 : 15 79 80 90 96
while_cond_mark      : 40 62
while_end            : 40 62
while_start          : 40 62

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . elementos_opt
    (2) elementos_opt -> . lambda
    (3) elementos_opt -> . elementos
    (135) lambda -> .
    (4) elementos -> . elementos elemento
    (5) elementos -> . elemento
    (6) elemento -> . SEMICOLON
    (7) elemento -> . declaracion_funcion_void
    (8) elemento -> . declaracion_o_funcion_tipada
    (9) elemento -> . declaracion_record SEMICOLON
    (10) elemento -> . sentencia_bloque
    (11) elemento -> . sentencia_simple SEMICOLON
    (12) declaracion_funcion_void -> . VOID ID LPAREN parametros_opt RPAREN inicio_funcion_void bloque_void fin_funcion_void
    (15) declaracion_o_funcion_tipada -> . tipo ID marcar_declaracion_tipada resto_tipado_programa
    (85) declaracion_record -> . RECORD ID LPAREN campos_record_opt RPAREN
    (46) sentencia_bloque -> . bloque
    (47) sentencia_bloque -> . sentencia_if
    (48) sentencia_bloque -> . sentencia_while
    (49) sentencia_bloque -> . sentencia_do_while
    (74) sentencia_simple -> . asignacion
    (75) sentencia_simple -> . print_stmt
    (76) sentencia_simple -> . BREAK
    (77) sentencia_simple -> . RETURN expresion
    (78) sentencia_simple -> . expresion
    (97) tipo -> . INT
    (98) tipo -> . FLOAT
    (99) tipo -> . CHAR
    (100) tipo -> . BOOLEAN
    (101) tipo -> . ID
    (50) bloque -> . LBRACE elementos_bloque_opt RBRACE
    (59) sentencia_if -> . IF LPAREN expresion RPAREN if_mark bloque else_opt if_end_mark
    (62) sentencia_while -> . WHILE while_start LPAREN expresion RPAREN while_cond_mark entrar_bucle bloque salir_bucle while_end
    (63) sentencia_do_while -> . DO do_start entrar_bucle bloque salir_bucle WHILE LPAREN expresion RPAREN SEMICOLON do_end
    (83) asignacion -> . acceso ASSIGN expresion
    (84) print_stmt -> . PRINT LPAREN argumentos_opt RPAREN
    (102) expresion -> . expresion OR expresion
    (103) expresion -> . expresion AND expresion
    (104) expresion -> . expresion EQUAL expresion
    (105) expresion -> . expresion GREATER expresion
    (106) expresion -> . expresion GREATER_EQUAL expresion
    (107) expresion -> . expresion LESS expresion
    (108) expresion -> . expresion LESS_EQUAL expresion
    (109) expresion -> . expresion PLUS expresion
    (110) expresion -> . expresion MINUS expresion
    (111) expresion -> . expresion TIMES expresion
    (112) expresion -> . expresion DIVIDE expresion
    (113) expresion -> . NOT expresion
    (114) expresion -> . MINUS expresion
    (115) expresion -> . PLUS expresion
    (116) expresion -> . primario
    (122) acceso -> . ID
    (123) acceso -> . acceso DOT ID
    (117) primario -> . literal
    (118) primario -> . acceso
    (119) primario -> . llamada
    (120) primario -> . LPAREN expresion RPAREN
    (121) primario -> . instanciacion
    (130) literal -> . INT_VALUE
    (131) literal -> . FLOAT_VALUE
    (132) literal -> . CHAR_VALUE
    (133) literal -> . TRUE
    (134) literal -> . FALSE
    (124) llamada -> . ID LPAREN argumentos_opt RPAREN
    (125) instanciacion -> . NEW ID LPAREN argumentos_opt RPAREN

    $end            reduce using rule 135 (lambda -> .)
    SEMICOLON       shift and go to state 6
    VOID            shift and go to state 12
    RECORD          shift and go to state 16
    BREAK           shift and go to state 23
    RETURN          shift and go to state 24
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    BOOLEAN         shift and go to state 29
    ID              shift and go to state 13
    LBRACE          shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    DO              shift and go to state 33
    PRINT           shift and go to state 35
    NOT             shift and go to state 38
    MINUS           shift and go to state 37
    PLUS            shift and go to state 36
    LPAREN          shift and go to state 14
    INT_VALUE       shift and go to state 43
    FLOAT_VALUE     shift and go to state 44
    CHAR_VALUE      shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NEW             shift and go to state 48

    programa                       shift and go to state 1
    elementos_opt                  shift and go to state 2
    lambda                         shift and go to state 3
    elementos                      shift and go to state 4
    elemento                       shift and go to state 5
    declaracion_funcion_void       shift and go to state 7
    declaracion_o_funcion_tipada   shift and go to state 8
    declaracion_record             shift and go to state 9
    sentencia_bloque               shift and go to state 10
    sentencia_simple               shift and go to state 11
    tipo                           shift and go to state 15
    bloque                         shift and go to state 17
    sentencia_if                   shift and go to state 18
    sentencia_while                shift and go to state 19
    sentencia_do_while             shift and go to state 20
    asignacion                     shift and go to state 21
    print_stmt                     shift and go to state 22
    expresion                      shift and go to state 25
    acceso                         shift and go to state 34
    primario                       shift and go to state 39
    literal                        shift and go to state 40
    llamada                        shift and go to state 41
    instanciacion                  shift and go to state 42

state 1

    (0) S' -> programa .



state 2

    (1) programa -> elementos_opt .

    $end            reduce using rule 1 (programa -> elementos_opt .)


state 3

    (2) elementos_opt -> lambda .

    $end            reduce using rule 2 (elementos_opt -> lambda .)


state 4

    (3) elementos_opt -> elementos .
    (4) elementos -> elementos . elemento
    (6) elemento -> . SEMICOLON
    (7) elemento -> . declaracion_funcion_void
    (8) elemento -> . declaracion_o_funcion_tipada
    (9) elemento -> . declaracion_record SEMICOLON
    (10) elemento -> . sentencia_bloque
    (11) elemento -> . sentencia_simple SEMICOLON
    (12) declaracion_funcion_void -> . VOID ID LPAREN parametros_opt RPAREN inicio_funcion_void bloque_void fin_funcion_void
    (15) declaracion_o_funcion_tipada -> . tipo ID marcar_declaracion_tipada resto_tipado_programa
    (85) declaracion_record -> . RECORD ID LPAREN campos_record_opt RPAREN
    (46) sentencia_bloque -> . bloque
    (47) sentencia_bloque -> . sentencia_if
    (48) sentencia_bloque -> . sentencia_while
    (49) sentencia_bloque -> . sentencia_do_while
    (74) sentencia_simple -> . asignacion
    (75) sentencia_simple -> . print_stmt
    (76) sentencia_simple -> . BREAK
    (77) sentencia_simple -> . RETURN expresion
    (78) sentencia_simple -> . expresion
    (97) tipo -> . INT
    (98) tipo -> . FLOAT
    (99) tipo -> . CHAR
    (100) tipo -> . BOOLEAN
    (101) tipo -> . ID
    (50) bloque -> . LBRACE elementos_bloque_opt RBRACE
    (59) sentencia_if -> . IF LPAREN expresion RPAREN if_mark bloque else_opt if_end_mark
    (62) sentencia_while -> . WHILE while_start LPAREN expresion RPAREN while_cond_mark entrar_bucle bloque salir_bucle while_end
    (63) sentencia_do_while -> . DO do_start entrar_bucle bloque salir_bucle WHILE LPAREN expresion RPAREN SEMICOLON do_end
    (83) asignacion -> . acceso ASSIGN expresion
    (84) print_stmt -> . PRINT LPAREN argumentos_opt RPAREN
    (102) expresion -> . expresion OR expresion
    (103) expresion -> . expresion AND expresion
    (104) expresion -> . expresion EQUAL expresion
    (105) expresion -> . expresion GREATER expresion
    (106) expresion -> . expresion GREATER_EQUAL expresion
    (107) expresion -> . expresion LESS expresion
    (108) expresion -> . expresion LESS_EQUAL expresion
    (109) expresion -> . expresion PLUS expresion
    (110) expresion -> . expresion MINUS expresion
    (111) expresion -> . expresion TIMES expresion
    (112) expresion -> . expresion DIVIDE expresion
    (113) expresion -> . NOT expresion
    (114) expresion -> . MINUS expresion
    (115) expresion -> . PLUS expresion
    (116) expresion -> . primario
    (122) acceso -> . ID
    (123) acceso -> . acceso DOT ID
    (117) primario -> . literal
    (118) primario -> . acceso
    (119) primario -> . llamada
    (120) primario -> . LPAREN expresion RPAREN
    (121) primario -> . instanciacion
    (130) literal -> . INT_VALUE
    (131) literal -> . FLOAT_VALUE
    (132) literal -> . CHAR_VALUE
    (133) literal -> . TRUE
    (134) literal -> . FALSE
    (124) llamada -> . ID LPAREN argumentos_opt RPAREN
    (125) instanciacion -> . NEW ID LPAREN argumentos_opt RPAREN

    $end            reduce using rule 3 (elementos_opt -> elementos .)
    SEMICOLON       shift and go to state 6
    VOID            shift and go to state 12
    RECORD          shift and go to state 16
    BREAK           shift and go to state 23
    RETURN          shift and go to state 24
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    BOOLEAN         shift and go to state 29
    ID              shift and go to state 13
    LBRACE          shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    DO              shift and go to state 33
    PRINT           shift and go to state 35
    NOT             shift and go to state 38
    MINUS           shift and go to state 37
    PLUS            shift and go to state 36
    LPAREN          shift and go to state 14
    INT_VALUE       shift and go to state 43
    FLOAT_VALUE     shift and go to state 44
    CHAR_VALUE      shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    NEW             shift and go to state 48

    elemento                       shift and go to state 49
    declaracion_funcion_void       shift and go to state 7
    declaracion_o_funcion_tipada   shift and go to state 8
    declaracion_record             shift and go to state 9
    sentencia_bloque               shift and go to state 10
    sentencia_simple               shift and go to state 11
    tipo                           shift and go to state 15
    bloque                         shift and go to state 17
    sentencia_if                   shift and go to state 18
    sentencia_while                shift and go to state 19
    sentencia_do_while             shift and go to state 20
    asignacion                     shift and go to state 21
    print_stmt                     shift and go to state 22
    expresion                      shift and go to state 25
    acceso                         shift and go to state 34
    primario                       shift and go to state 39
    literal                        shift and go to state 40
    llamada                        shift and go to state 41
    instanciacion                  shift and go to state 42

state 5

    (5) elementos -> elemento .

    SEMICOLON       reduce using rule 5 (elementos -> elemento .)
    VOID            reduce using rule 5 (elementos -> elemento .)
    RECORD          reduce using rule 5 (elementos -> elemento .)
    BREAK           reduce using rule 5 (elementos -> elemento .)
    RETURN          reduce using rule 5 (elementos -> elemento .)
    INT             reduce using rule 5 (elementos -> elemento .)
    FLOAT           reduce using rule 5 (elementos -> elemento .)
    CHAR            reduce using rule 5 (elementos -> elemento .)
    BOOLEAN         reduce using rule 5 (elementos -> elemento .)
    ID              reduce using rule 5 (elementos -> elemento .)
    LBRACE          reduce using rule 5 (elementos -> elemento .)
    IF              reduce using rule 5 (elementos -> elemento .)
    WHILE           reduce using rule 5 (elementos -> elemento .)
    DO              reduce using rule 5 (elementos -> elemento .)
    PRINT           reduce using rule 5 (elementos -> elemento .)
    NOT             reduce using rule 5 (elementos -> elemento .)
    MINUS           reduce using rule 5 (elementos -> elemento .)
    PLUS            reduce using rule 5 (elementos -> elemento .)
    LPAREN          reduce using rule 5 (elementos -> elemento .)
    INT_VALUE       reduce using rule 5 (elementos -> elemento .)
    FLOAT_VALUE     reduce using rule 5 (elementos -> elemento .)
    CHAR_VALUE      reduce using rule 5 (elementos -> elemento .)
    TRUE            reduce using rule 5 (elementos -> elemento .)
    FALSE           reduce using rule 5 (elementos -> elemento .)
    NEW             reduce using rule 5 (elementos -> elemento .)
    $end            reduce using rule 5 (elementos -> elemento .)


state 6

    (6) elemento -> SEMICOLON .

    SEMICOLON       reduce using rule 6 (elemento -> SEMICOLON .)
    VOID            reduce using rule 6 (elemento -> SEMICOLON .)
    RECORD          reduce using rule 6 (elemento -> SEMICOLON .)
    BREAK           reduce using rule 6 (elemento -> SEMICOLON .)
    RETURN          reduce using rule 6 (elemento -> SEMICOLON .)
    INT             reduce using rule 6 (elemento -> SEMICOLON .)
    FLOAT           reduce using rule 6 (elemento -> SEMICOLON .)
    CHAR            reduce using rule 6 (elemento -> SEMICOLON .)
    BOOLEAN         reduce using rule 6 (elemento -> SEMICOLON .)
    ID              reduce using rule 6 (elemento -> SEMICOLON .)
    LBRACE          reduce using rule 6 (elemento -> SEMICOLON .)
    IF              reduce using rule 6 (elemento -> SEMICOLON .)
    WHILE           reduce using rule 6 (elemento -> SEMICOLON .)
    DO              reduce using rule 6 (elemento -> SEMICOLON .)
    PRINT           reduce using rule 6 (elemento -> SEMICOLON .)
    NOT             reduce using rule 6 (elemento -> SEMICOLON .)
    MINUS           reduce using rule 6 (elemento -> SEMICOLON .)
    PLUS            reduce using rule 6 (elemento -> SEMICOLON .)
    LPAREN          reduce using rule 6 (elemento -> SEMICOLON .)
    INT_VALUE       reduce using rule 6 (elemento -> SEMICOLON .)
    FLOAT_VALUE     reduce using rule 6 (elemento -> SEMICOLON .)
    CHAR_VALUE      reduce using rule 6 (elemento -> SEMICOLON .)
    TRUE            reduce using rule 6 (elemento -> SEMICOLON .)
    FALSE           reduce using rule 6 (elemento -> SEMICOLON .)
    NEW             reduce using rule 6 (elemento -> SEMICOLON .)
    $end            reduce using rule 6 (elemento -> SEMICOLON .)


state 7

    (7) elemento -> declaracion_funcion_void .

    SEMICOLON       reduce using rule 7 (elemento -> declaracion_funcion_void .)
    VOID            reduce using rule 7 (elemento -> declaracion_funcion_void .)
    RECORD          reduce using rule 7 (elemento -> declaracion_funcion_void .)
    BREAK           reduce using rule 7 (elemento -> declaracion_funcion_void .)
    RETURN          reduce using rule 7 (elemento -> declaracion_funcion_void .)
    INT             reduce using rule 7 (elemento -> declaracion_funcion_void .)
    FLOAT           reduce using rule 7 (elemento -> declaracion_funcion_void .)
    CHAR            reduce using rule 7 (elemento -> declaracion_funcion_void .)
    BOOLEAN         reduce using rule 7 (elemento -> declaracion_funcion_void .)
    ID              reduce using rule 7 (elemento -> declaracion_funcion_void .)
    LBRACE          reduce using rule 7 (elemento -> declaracion_funcion_void .)
    IF              reduce using rule 7 (elemento -> declaracion_funcion_void .)
    WHILE           reduce using rule 7 (elemento -> declaracion_funcion_void .)
    DO              reduce using rule 7 (elemento -> declaracion_funcion_void .)
    PRINT           reduce using rule 7 (elemento -> declaracion_funcion_void .)
    NOT             reduce using rule 7 (elemento -> declaracion_funcion_void .)
    MINUS           reduce using rule 7 (elemento -> declaracion_funcion_void .)
    PLUS            reduce using rule 7 (elemento -> declaracion_funcion_void .)
    LPAREN          reduce using rule 7 (elemento -> declaracion_funcion_void .)
    INT_VALUE       reduce using rule 7 (elemento -> declaracion_funcion_void .)
    FLOAT_VALUE     reduce using rule 7 (elemento -> declaracion_funcion_void .)
    CHAR_VALUE      reduce using rule 7 (elemento -> declaracion_funcion_void .)
    TRUE            reduce using rule 7 (elemento -> declaracion_funcion_void .)
    FALSE           reduce using rule 7 (elemento -> declaracion_funcion_void .)
    NEW             reduce using rule 7 (elemento -> declaracion_funcion_void .)
    $end            reduce using rule 7 (elemento -> declaracion_funcion_void .)


state 8

    (8) elemento -> declaracion_o_funcion_tipada .

    SEMICOLON       reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    VOID            reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    RECORD          reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    BREAK           reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    RETURN          reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    INT             reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    FLOAT           reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    CHAR            reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    BOOLEAN         reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    ID              reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    LBRACE          reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    IF              reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    WHILE           reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    DO              reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    PRINT           reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    NOT             reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    MINUS           reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    PLUS            reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    LPAREN          reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    INT_VALUE       reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    FLOAT_VALUE     reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    CHAR_VALUE      reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    TRUE            reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    FALSE           reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    NEW             reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)
    $end            reduce using rule 8 (elemento -> declaracion_o_funcion_tipada .)


state 9

    (9) elemento -> declaracion_record . SEMICOLON

    SEMICOLON       shift and go to state 50


state 10

    (10) elemento -> sentencia_bloque .

    SEMICOLON       reduce using rule 10 (elemento -> sentencia_bloque .)
    VOID            reduce using rule 10 (elemento -> sentencia_bloque .)
    RECORD          reduce using rule 10 (elemento -> sentencia_bloque .)
    BREAK           reduce using rule 10 (elemento -> sentencia_bloque .)
    RETURN          reduce using rule 10 (elemento -> sentencia_bloque .)
    INT             reduce using rule 10 (elemento -> sentencia_bloque .)
    FLOAT           reduce using rule 10 (elemento -> sentencia_bloque .)
    CHAR            reduce using rule 10 (elemento -> sentencia_bloque .)
    BOOLEAN         reduce using rule 10 (elemento -> sentencia_bloque .)
    ID              reduce using rule 10 (elemento -> sentencia_bloque .)
    LBRACE          reduce using rule 10 (elemento -> sentencia_bloque .)
    IF              reduce using rule 10 (elemento -> sentencia_bloque .)
    WHILE           reduce using rule 10 (elemento -> sentencia_bloque .)
    DO              reduce using rule 10 (elemento -> sentencia_bloque .)
    PRINT           reduce using rule 10 (elemento -> sentencia_bloque .)
    NOT             reduce using rule 10 (elemento -> sentencia_bloque .)
    MINUS           reduce using rule 10 (elemento -> sentencia_bloque .)
    PLUS            reduce using rule 10 (elemento -> sentencia_bloque .)
    LPAREN          reduce using rule 10 (elemento -> sentencia_bloque .)
    INT_VALUE       reduce using rule 10 (elemento -> sentencia_bloque .)
    FLOAT_VALUE     reduce using rule 10 (elemento -> sentencia_bloque .)
    CHAR_VALUE      reduce using rule 10 (elemento -> sentencia_bloque .)
    TRUE            reduce using rule 10 (elemento -> sentencia_bloque .)
    FALSE           reduce using rule 10 (elemento -> sentencia_bloque .)
    NEW             reduce using rule 10 (elemento -> sentencia_bloque .)
    $end            reduce using rule 10 (elemento -> sentencia_bloque .)


state 11

    (11) elemento -> sentencia_simple . SEMICOLON

    SEMICOLON       shift and go to state 51


state 12

    (12) declaracion_funcion_void -> VOID . ID LPAREN parametros_opt RPAREN inicio_funcion_void bloque_void fin_funcion_void

    ID              shift and go to state 52


state 13

    (101) tipo -> ID .
    (122) acceso -> ID .
    (124) llamada -> ID . LPAREN argumentos_opt RPAREN

    ID              reduce using rule 101 (tipo -> ID .)
    ASSIGN          reduce using rule 122 (acceso -> ID .)
    DOT             reduce using rule 122 (acceso -> ID .)
    OR              reduce using rule 122 (acceso -> ID .)
    AND             reduce using rule 122 (acceso -> ID .)
    EQUAL           reduce using rule 122 (acceso -> ID .)
    GREATER         reduce using rule 122 (acceso -> ID .)
    GREATER_EQUAL   reduce using rule 122 (acceso -> ID .)
    LESS            reduce using rule 122 (acceso -> ID .)
    LESS_EQUAL      reduce using rule 122 (acceso -> ID .)
    PLUS            reduce using rule 122 (acceso -> ID .)
    MINUS           reduce using rule 122 (acceso -> ID .)
    TIMES           reduce using rule 122 (acceso -> ID .)
    DIVIDE          reduce using rule 122 (acceso -> ID .)
    SEMICOLON       reduce using rule 122 (acceso -> ID .)
    LPAREN          shift and go to state 53


state 14
